ui: major visual design work; implement deep-linking into page tabs

--- a/src/ui/component/dialog/BanDialog.pug
+++ b/src/ui/component/dialog/BanDialog.pug
@@ -16,7 +16,7 @@ script.
 
 form.ban-menu
 	fieldset.ban-menu-message-to-user
-		TextInput(autofocus={true} placeholder='Message for user...' type_action={value => message_input_value = value})
+		TextInput(autofocus={true} placeholder='Message to user...' type_action={value => message_input_value = value})
 	fieldset.ban-menu-durations
 		{#each ban_lengths as duration}
 			label.ban-menu-duration
