--- a/src/ui/component/shared/Popup.pug
+++ b/src/ui/component/shared/Popup.pug
@@ -25,9 +25,9 @@ style.
 		width 100dvw
 		z-index 10
 	.popup-body
-		background white
+		background var(--c-subreddit-theme)
 		border-radius 12px
-		box-shadow 0 0 24px gainsboro
+		box-shadow 0 0 24px var(--c-blend-normal)
 		max-height 96dvh
 		max-width 700px
 		overflow auto
