--- a/src/ui/component/comment/Comment.pug
+++ b/src/ui/component/comment/Comment.pug
@@ -40,7 +40,8 @@ script.
 	score_text_color = (comment) -> switch
 		when comment.distinguished is 'admin' then 'white'
 		when comment.distinguished is 'moderator' then 'white'
-		else 'var(--c-text-weak)'
+		when Math.log10(comment.score) > 2 then 'white'
+		else 'black'
 	title_text = (comment) ->
 		score_text = switch
 			when comment.score_hidden or !Number.isFinite(comment.score) then 'score hidden'
@@ -60,11 +61,6 @@ script.
 					if status.success
 						api.submit(api.ID('comment_ignore_reports', id))
 				)
-			when 'ban_user'
-				banning = true
-			when 'ban_user_finish'
-				api.submit(api.ID('user_ban', data.user_name, data.subreddit_name), { days: data.days, message_to_user: data.message_to_user, violation_reason: data.violation_reason })
-				banning = false
 			when 'distinguish_as_mod'
 				api.submit(api.ID('comment_distinguish', id), { type: 'moderator' })
 			when 'downvote'
@@ -82,6 +78,12 @@ script.
 				api.submit(api.ID('comment_pin', id))
 			when 'remove'
 				api.submit(api.ID('comment_remove', id))
+			when 'remove_and_ban_user'
+				banning = true
+			when 'remove_and_ban_user_finish'
+				api.submit(api.ID('user_ban', data.user_name, data.subreddit_name), { days: data.days, message_to_user: data.message_to_user, violation_reason: data.violation_reason })
+				interact('remove')
+				banning = false
 			when 'reply'
 				replying = true
 			when 'reply_finish'
@@ -123,19 +125,20 @@ script.
 		<!-- 'comment' role is draft status and not recognized yet -->
 		<!-- svelte-ignore a11y-unknown-role -->
 		article.comment(class:comment-deleted={(comment.author === '[deleted]' && comment.body[0] === '[') || comment.removal_reason} class:comment-downvoted={comment.likes === false} class:comment-highlighted={id === focus_comment_id} class:comment-upvoted={comment.likes === true} class:comment-with-low-score={!comment.score_hidden && comment.score < 1} role='comment' title={title_text(comment)})
-			section.comment-body(data-can-edit={comment.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !comment.locked) || null} data-can-mod={comment.can_mod_post || null} data-distinguish={comment.distinguished || null} data-pinned={comment.stickied || null} data-radial-menu='comment' data-saved={comment.saved || null} on:radialmenu={e => interact(e.detail)} style='background-color: {score_color(comment)}; color: {score_text_color(comment)}')
+			section.comment-meta
+				data.comment-author
+					UserByline(distinguish={comment.distinguished || (comment.is_submitter && 'submitter')} flair_color={comment.author_flair_background_color} flair_rich_text={comment.author_flair_richtext} flair_text={comment.author_flair_text} name={comment.author})
+			section.comment-body(data-can-edit={comment.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !comment.locked) || null} data-can-mod={comment.can_mod_post || null} data-distinguish={comment.distinguished || null} data-pinned={comment.stickied || null} data-radial-menu='comment' data-saved={comment.saved || null} on:radialmenu={e => interact(e.detail)} style='border-color: {score_color(comment)}')
 				FormattedHTML(html={comment.body_html})
-			aside.comment-user-info
-				UserByline(distinguish={comment.distinguished || (comment.is_submitter && 'submitter')} flair_color={comment.author_flair_background_color} flair_rich_text={comment.author_flair_richtext} flair_text={comment.author_flair_text} name={comment.author})
 		{#if reporting}
 			Popup(on:close={() => reporting = false})
 				ReportDialog(on:submit={e => interact('report_finish', { violation_reason: e.detail })} subreddit_name={comment.subreddit} target_type='comment')
 		{#if banning}
 			Popup(on:close={() => banning = false})
-				BanDialog(on:submit={e => interact('ban_user_finish', { days: e.detail.days, message_to_user: e.detail.message_to_user, subreddit_name: comment.subreddit, user_name: comment.author })})
+				BanDialog(on:submit={e => interact('remove_and_ban_user_finish', { days: e.detail.days, message_to_user: e.detail.message_to_user, subreddit_name: comment.subreddit, user_name: comment.author })})
 		{#if out_of_context}
-			cite.comment-source-info
-				Button(link={format_url({ post_focus_comment_parent_count: 3, post_focus_comment_id: id, post_id: comment.link_id.slice(3), subreddit_name: comment.subreddit })} text='View in context →')
+			cite.comment-source-link
+				Button(link={format_url({ post_focus_comment_parent_count: 3, post_focus_comment_id: id, post_id: comment.link_id.slice(3), subreddit_name: comment.subreddit })} text='View →')
 		{:else}
 			ol.comment-replies
 				{#if replying}
@@ -144,7 +147,7 @@ script.
 					svelte:self(id={reply_id})
 				{#if comment.num_more_replies > 0}
 					menu.comment-more-replies
-						Button(action={() => api.load(comment.more_replies_id)} loading={more_replies_loading} text="+ {comment.num_more_replies} {comment.num_more_replies === 1 ? 'reply' : 'replies'}")
+						Button(action={() => api.load(comment.more_replies_id)} loading={more_replies_loading} text="{comment.num_more_replies} more")
 				{#if comment.deeper_replies}
 					menu.comment-more-replies
 						Button(link='/r/{comment.subreddit}/post/{comment.link_id.slice(3)}/comment/{id}' text='Continue thread...')
@@ -154,15 +157,15 @@ style.
 		margin 0.666em 0
 		position relative
 	.comment-body
-		border-radius 1em
+		border-left 1px solid
 		display inline-block
-		max-width 360px
-		padding 1em
+		max-width 420px
+		padding 10px 12px
 		.comment-deleted > &
 			opacity 0.25
 			pointer-events none
 		.comment-highlighted > &
-			background-color gold !important
+			background-color lightgoldenrodyellow
 		.comment-with-low-score:not(.comment-deleted) > &
 			opacity 0.5
 		:global(& img)
@@ -172,17 +175,18 @@ style.
 			width auto
 	.comment-clip
 		display flex
+		justify-content space-between
+	.comment-meta
+		align-items center
+		display flex
+		gap 6px
+		opacity 0
+		.comment:hover &
+			opacity 1
 	.comment-more-replies
 		padding 0.666em 0
 	.comment-replies
 		border-left 1px solid var(--c-blend-normal)
 		padding-left 24px
-	.comment-source-info
+	.comment-source-link
 		margin 0.666em 1em
-	.comment-user-info
-		left 0
-		opacity 0
-		position absolute
-		top -1.5em
-		.comment:hover &
-			opacity 1
