--- a/src/ui/component/global/stylesheet.styl
+++ b/src/ui/component/global/stylesheet.styl
@@ -1,21 +1,11 @@
 // Imports
 @font-face
-	font-family 'Arimo'
-	font-style normal
-	font-weight 400 700
-	src url('../../../vendor/arimo_400_700.ttf')
-@font-face
-	font-family 'Arimo'
-	font-style italic
-	font-weight 400 700
-	src url('../../../vendor/arimo_400_700_i.ttf')
-@font-face
 	font-family 'Inter'
 	font-style normal italic
 	font-weight 100 900
 	src url('../../../vendor/inter_100_900.woff2')
 
-// Resets
+// Baseline resets
 *
 	box-sizing border-box
 	margin 0
@@ -29,27 +19,32 @@
 
 // Base layout & theme
 html
-	font 15px/1.5 'Arimo', 'Arial', 'Helvetica', sans-serif
+	font 15px 'Inter'
+	font-feature-settings 'ss01'
+	line-height 1.5
 	scrollbar-gutter stable both-edges // doesn't work on <body>
 body
-	background-color var(--c-bg)
-	color var(--c-text-strong)
+	background-color var(--c-subreddit-theme)
+	color var(--c-subreddit-theme-text)
 	display grid
+	font-weight var(--f-wght-normal)
 	grid-auto-flow row
 	grid-template-columns 1fr
 	padding 4em 2em
 	place-items center
-	--c-admin orangered
+	--c-admin red
 	--c-hint-normal wheat
+	--c-link mediumslateblue
+	--c-link-visited mediumpurple
 	--c-mod darkseagreen
 	--c-op #c3e0ff
 	--c-score-0 #e3e6eb
 	--c-score-1 antiquewhite
 	--c-score-2 wheat
 	--c-score-3 lightsalmon
-	--c-score-4 salmon
-	--c-subreddit-theme-default #cee3f8
-	--c-subreddit-theme-secondary-default orangered
+	--c-score-4 coral
+	--c-subreddit-theme-default white
+	--c-subreddit-theme-secondary-default coral
 	--c-subreddit-theme-text-default black
 .color-strategy-black-text
 	color-scheme light
@@ -60,13 +55,14 @@ body
 	--c-con-normal rgba(255,255,255,0.10)
 	--c-con-strong rgba(255,255,255,0.50)
 	--c-con-xstrong rgba(255,255,255,0.80)
+	--c-text-xfaint rgba(0,0,0,0.125)
 	--c-text-faint rgba(0,0,0,0.25)
 	--c-text-weak rgba(0,0,0,0.50)
 	--c-text-strong #333
 	--c-text-reverse white
-	--f-wght-normal 400
-	--f-wght-strong 500
-	--f-wght-xstrong 600
+	--f-wght-normal 450
+	--f-wght-strong 650
+	--f-wght-xstrong 700
 .color-strategy-white-text
 	color-scheme dark
 	--c-bg #333
@@ -76,18 +72,49 @@ body
 	--c-con-normal rgba(0,0,0,0.10)
 	--c-con-strong rgba(0,0,0,0.50)
 	--c-con-xstrong rgba(0,0,0,0.80)
+	--c-text-xfaint rgba(255,255,255,0.125)
 	--c-text-faint rgba(255,255,255,0.25)
 	--c-text-weak rgba(255,255,255,0.50)
 	--c-text-strong white
 	--c-text-reverse black
-	--f-wght-normal 350
-	--f-wght-strong 450
-	--f-wght-xstrong 550
+	--f-wght-normal 400
+	--f-wght-strong 600
+	--f-wght-xstrong 650
 
 // Typography
+a
+	color inherit
+	text-decoration none
+	.md &
+		color var(--c-link)
+		border-bottom 1px solid
+		&:hover
+			color var(--c-hint-normal)
+		&:visited
+			color var(--c-link-visited)
+address
+	font-style normal
+blockquote
+	border-left 2px solid var(--c-text-xfaint)
+	color var(--c-text-weak)
+	font-size 13px
+	margin 0 0 1rem
+	padding-left 0.666em
+	& > :last-child
+		margin-bottom 0
+cite
+	font-style normal
+code
+	word-break break-all
+kbd
+	font inherit
 pre
-	font 12px/1.5 monospace
-	letter-spacing 0
+	margin 0 0 1em
+	overflow auto
+	white-space pre-line
+sub
+sup
+	line-height 0
 .md
 	h1
 	h2
@@ -95,37 +122,58 @@ pre
 	h4
 	h5
 	h6
-		letter-spacing 0
-		line-height 1.333
-		margin 1em 0 0.5em
+		font-weight var(--f-wght-xstrong)
+		margin 1em 0
 		&:first-child
 			margin-top 0
 	h1
-		font-size 1.8em
-		font-weight 700
-		letter-spacing -1.333px
+		font-size 32px
+		line-height 40px
 	h2
-		font-size 1.55em
-		font-weight 650
-		letter-spacing -1px
+		font-size 30px
+		line-height 40px
 	h3
-		font-size 1.15em
-		font-weight 600
-		letter-spacing -0.333px
+		font-size 24px
+		line-height 32px
 	h4
+		font-size 20px
+		line-height 28px
 	h5
 	h6
-		font-size 1em
-		font-weight 550
+		font-size 18px
+		line-height 26px
+	b
+	strong
+		font-weight var(--f-wght-xstrong)
+.md-spoiler-text
+	background black
+	border-radius 5px
+	color transparent
+	cursor default
+	*
+		opacity 0
+	&:hover
+		background var(--c-con-normal)
+		color inherit
+		*
+			opacity 1
 
-// Layout sections
+// General layout
+.md
+	overflow-wrap anywhere
+	& > :last-child
+		margin-bottom 0
+	img
+		border-radius 5px
+		margin 0 0 1em
 p
-	margin 0 0 0.666em
+	margin 0 0 1em
 hr
 	border 0
 	border-bottom 1px solid
 	margin 1em auto
 	opacity 0.8
+	width 100%
 menu
 	padding 0
 fieldset
@@ -141,7 +189,7 @@ ul
 .md
 	ol
 	ul
-		margin 0 0 0.666em
+		margin 0 0 1em
 	ol
 		counter-reset list
 		& li
@@ -151,6 +199,8 @@ ul
 		padding-inline-start 1ch
 		&::marker
 			content '-'
+		&:last-child
+			margin-bottom 0
 		& > ol
 		& > ul
 			margin 0.333em 0
@@ -164,79 +214,27 @@ ul
 .md
 	table
 		border-collapse collapse
+		font-feature-settings 'ss01', 'tnum'
 		font-size 12px
-		line-height 16px
+		letter-spacing 0.5px
 		margin 0 0 1em
 		overflow-wrap normal
 	td
 	th
-		padding 0 2ch 1ch 0
+		padding 0.5em 0
+		padding-right 1em
 		text-align left
+		&:last-child
+			padding-right 0
 	td
 		border-top 1px solid var(--c-text-faint)
 		vertical-align top
 	th
 		font-weight var(--f-wght-strong)
 		font-size 10px
-		letter-spacing 0.333px
+		letter-spacing 1px
+		text-transform uppercase
 		vertical-align bottom
-
-// Formatted text
-a
-	color inherit
-	text-decoration none
-	&:hover
-		color var(--c-hint-normal)
-address
-cite
-	font-style normal
-sub
-sup
-	line-height 0
-.md
-	overflow-wrap anywhere
-	& > :last-child
-		margin-bottom 0
-	a
-		text-decoration underline
-	img
-		margin 1.333em 0
-
-// Verbatim text
-blockquote
-	border-left 4px solid var(--c-text-faint)
-	color var(--c-text-weak)
-	font-size 13px
-	margin 0 0 0.666rem
-	padding-left 1ch
-	& > :last-child
-		margin-bottom 0
-code
-	word-break break-all
-pre
-	background var(--c-con-normal)
-	border 1px solid transparent
-	border-radius 6px
-	margin 0 0 1em
-	padding 0 1em
-	overflow auto
-	white-space pre-line
-kbd
-	font inherit
-
-// Spoilers
-.md-spoiler-text
-	background black
-	border-radius 5px
-	color transparent
-	cursor default
-	*
-		opacity 0
-	&:hover
-		background var(--c-con-normal)
-		color inherit
-		*
-			opacity 1
 
 // Interactive
 button
