--- a/src/ui/component/post/PostComments.pug
+++ b/src/ui/component/post/PostComments.pug
@@ -35,7 +35,7 @@ script.
 				Comment(id={reply_id})
 			{#if post.num_more_replies > 0}
 				.post-more-replies
-					Button(action={() => api.load(post.more_replies_id)} loading={more_replies_loading} text="+ {post.num_more_replies} {post.num_more_replies === 1 ? 'reply' : 'replies'}")
+					Button(action={() => api.load(post.more_replies_id)} loading={more_replies_loading} text="{post.num_more_replies} more")
 {:else if loading}
 	.post-comments-loading-notification Loading...
 
