--- a/src/ui/component/subreddit/SubredditWidget.pug
+++ b/src/ui/component/subreddit/SubredditWidget.pug
@@ -1,24 +1,26 @@
 script.
-	import { relativize_url } from '../../routing/url.coffee'
+	import { format_url, relativize_url } from '../../routing/url.coffee'
 	
 	import Button from '../shared/Button.pug'
+	import FeedLink from '../feed/FeedLink.pug'
 	import FormattedHTML from '../shared/FormattedHTML.pug'
 	import PostFlair from '../post/PostFlair.pug'
-	import SubredditNameTag from './SubredditNameTag.pug'
 
 	export widget = null
 
-.subreddit-widget
+article.subreddit-widget(class='subreddit-widget-type-{widget.kind}')
 	{#if widget.kind === 'button'}
-		header.subreddit-widget-title {widget.shortName}
+		h1.subreddit-widget-title {widget.shortName}
 		ol.subreddit-widget-links
 			{#each widget.buttons as button}
-				a(href={relativize_url(button.url)}) {button.text}
+				li.subreddit-widget-link
+					a(href={relativize_url(button.url)}) {button.text}
 	{:else if widget.kind === 'community-list'}
-		header.subreddit-widget-title {widget.shortName}
+		h1.subreddit-widget-title {widget.shortName}
 		ol.subreddit-widget-related-subreddits
 			{#each widget.data as subreddit}
-				SubredditNameTag(icon_url={subreddit.communityIcon || subreddit.iconUrl} name={subreddit.name})
+				li.subreddit-widget-related-subreddit
+					FeedLink(subreddit_name={subreddit.name} type='subreddit')
 	{:else if widget.kind === 'image'}
 		{@const image = widget.data[0]}
 			{#if image.linkUrl}
@@ -27,28 +29,34 @@ script.
 			{:else}
 				img.subreddit-widget-image(alt={widget.shortName} src={image.url} style='aspect-ratio: {image.width}/{image.height}')
 	{:else if widget.kind === 'post-flair'}
-		header.subreddit-widget-title Filter by Flair
+		h1.subreddit-widget-title Flair Filter
 		ol.subreddit-widget-post-flairs
 			{#each widget.order.map(x => widget.templates[x]) as flair}
-				a(href="?f=flair_name:'{flair.text}'")
+				a(href={format_url({ feed_search: 'flair:"' + flair.text + '"', feed_sort: 'new', subreddit_name: widget.subreddit })})
 					PostFlair(color={flair.backgroundColor} emoji_style='image' rich_text={flair.richtext} text={flair.text})
 	{:else if widget.kind === 'textarea'}
-		header.subreddit-widget-title {widget.shortName}
+		h1.subreddit-widget-title {widget.shortName}
 		FormattedHTML(html={widget.textHtml})
 
 style.
-	.subreddit-widget-links
-		display flex
-		flex-flow row wrap
-		gap 0.5em
+	.subreddit-widget
+		width 320px
+	.subreddit-widget:not(.subreddit-widget-type-image)
+		background var(--c-con-normal)
+		border-radius 5px
+		padding 1em
+	.subreddit-widget-image
+		border-radius 5px
+	.subreddit-widget-link
+		margin-bottom 0.333em
 	.subreddit-widget-post-flairs
 		display flex
 		flex-flow row wrap
 		gap 10px
-	.subreddit-widget-related-subreddits
-		display flex
-		flex-flow column nowrap
-		gap 10px
+	.subreddit-widget-related-subreddit
+		margin-bottom 0.333em
 	.subreddit-widget-title
-		font-weight 900
-		margin-bottom 1em
+		font-size inherit
+		font-feature-settings 'calt', 'cpsp', 'ss01'
+		margin-bottom 0.666em
+		text-transform uppercase
