--- a/src/ui/component/user/UserFlair.pug
+++ b/src/ui/component/user/UserFlair.pug
@@ -1,15 +1,15 @@
 script.
-	import { Color } from '../../../lib/index.js'
+	import { HexColor } from '../../../lib/index.js'
 
 	export color = null
 	export emoji_style = null
 	export rich_text = null
 	export text = null
 	
-	if !color then color = '#ffffff' # TODO
+	if !color then color = 'var(--c-subreddit-theme)'
 	text_color =
 		if color
-			if (new Color({ hex: color }))?.isDark() then 'white' else 'black'
+			HexColor.contrast(color)
 		else
 			'inherit'
 
@@ -38,5 +38,3 @@ style.
 		border-radius 0
 		display inline-block
 		height 16px
-		&:hover
-			transform scale(4)
